# crud

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  settings.toml
config/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
config/log/: logging.toml
database/: __init__.py  base.py  core.py
database/migrations/: env.py
database/migrations/versions/: 1d111a4e443b_first_migration.py  821e197ead68_second_migration.py  ae15c3d39167_second_migration.py  c66ce96ff99b_first_migration.py
helpers/designs/: singleton.py
kernel/: application.py  settings.py
kernel/settings/: base.py  database.py  logging.py
student/api/v1/: routers.py  schemas.py
student/helpers/: enums.py  exceptions.py
student/models/: student.py
student/repository/bll/: __init__.py  service.py
student/repository/dal/: __init__.py  interface.py  queryset.py
utils/: __init__.py  funcs.py
