[tool.poetry]
name = "crud-task"
version = "0.1.0"
description = ""
authors = ["soheil alimadadi <soheilblizzard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.17"
psycopg = {extras = ["binary", "pool"], version = "^3.1.9"}
alembic = "^1.11.1"
fastapi = {extras = ["all"], version = "^0.99.0"}
sqlalchemy-utils = "^0.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
